@@ -8,17 +8,17 @@ import java.util.List;
 public class ColumnUtils {
     public final static List<String> DEFAULT_COLUMN = Arrays.asList("A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z");
 
-   public static ShapeRC getColRowBaseOnRefString(
-           String refString,
-           List<String> cols
-    ){
+    public static ShapeRC getColRowBaseOnRefString(
+            String refString,
+            List<String> cols
+    ) {
         String column = refString.replaceAll("[0-9]", "");
         int row = Integer.parseInt(refString.substring(column.length()));
 
         row = Math.max(0, row - 1);
         int colIndex = cols.indexOf(column);
         if (colIndex < 0) {
-            cols = generateColumnName(cols,(int) Math.pow(10, column.length() + 1));
+            cols = generateColumnName(cols, (int) Math.pow(10, column.length() + 1));
             colIndex = cols.indexOf(column);
             if (colIndex < 0) {
                 colIndex = 0;
@@ -26,11 +26,12 @@ public class ColumnUtils {
         }
         return new ShapeRC(String.valueOf(row), String.valueOf(colIndex));
     }
+
     public static List<String> generateColumnName(
             List<String> cols,
             int num
     ) {
-        return generateColumnName(cols, num, "", Arrays.asList(), 0);
+        return generateColumnName(cols, num, "", List.of(), 0);
     }
 
     public static List<String> generateColumnName(
